--- a/Style Portofolio.css
+++ b/Style Portofolio.css
@@ -49,7 +49,7 @@ strong {
     --bs-btn-disabled-color: none;
     --bs-btn-disabled-bg: transparent;
     --bs-btn-disabled-border-color: none;
-    --bs-gradient: none;a
+    --bs-gradient: none;
 }
 .btn {
   border-radius: 50px;
@@ -142,11 +142,10 @@ button{
   max-width: 100%;
   margin: 10px;
 }
-.a{
-  color: ;
-}
+
 .portl{
   width:400px;
+  height: auto;
   margin: auto;
   transition: all 1s;
   
@@ -156,6 +155,7 @@ button{
   z-index: 1;
 }
 .portp{
+  width: auto;
   height:400px;
   margin: 20px;
   transition: all 1s;
